# entrainment-metrics

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  ap_evolution_function.py  continuous_time_series.py  entrainment.py  frame.py  inter_pause_unit.py  interpausal_unit.py  interpause_unit.py  knn.py  pyproject.toml  requirements.txt  script_knn.py  script_tama.py  tama.py  task_separator.py  test_knn.py  test_tama.py  time_series_creator.py  utils.py
.github/workflows/: python-package.yml
data/: 100-200-300_long.words  100-200-300_long_x2.words  200-300-100.words  200-300-100_long.words  hola-camaron.words  silence.words
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: conf.py  index.rst
docs/source/modules/: continuous.rst  ipu.rst  tama.rst
docs/source/usage/: continuous_time_series.rst  getting_ipus.rst  installation.rst  tama.rst  visualization.rst
entrainment_metrics/: __init__.py  interpausal_unit.py  utils.py
entrainment_metrics/continuous/: __init__.py  continuous_time_series.py  metrics.py  utils.py
entrainment_metrics/conversation_stadistics/: statistics.py  turn.py
entrainment_metrics/tama/: __init__.py  entrainment.py  frame.py  utils.py
examples/: entrainment-example.html  entrainment-example.ipynb
examples/data/: test-A.words  test-B.words
scripts/: extractStandardAcoustics.praat  run_knn.py  run_tama.py  task_separator.py
speechalyze/: __init__.py  interpausal_unit.py  utils.py
speechalyze/continuous/: __init__.py  continuous_time_series.py  metrics.py  utils.py
speechalyze/knn/: __init__.py  continuous_time_series.py  metrics.py
speechalyze/tama/: __init__.py  entrainment.py  frame.py  utils.py
tests/: test_knn.py  test_tama.py
