[tool.poetry]
name = "speechalyze"
version = "0.1.0"
description = "measure acoustic-prosodic entrainment in speech"
authors = ["Erik Ernst"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
click = "8.0.2"
scipy = "^1.8.1"
opensmile = "^2.4.1"
coverage = "^6.4.4"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
